crates/data-dict/tests/snapshots/validate__lint_dd001_fk_no_relationship.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd001-fk-no-relationship.yaml\")"
---
Error: [DD007]
    ╭─[ lint/dd001-fk-no-relationship.yaml:14:15 ]
    │
 14 │       - name: id
    │               ─┬  
    │                ╰── column `food.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [DD001]
    ╭─[ lint/dd001-fk-no-relationship.yaml:18:15 ]
    │
 18 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` is marked `foreign_key` but no `relationships` entry points it at a `primary_key` column
────╯

Error: [DD007]
    ╭─[ lint/dd001-fk-no-relationship.yaml:18:15 ]
    │
 18 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [DD007]
    ╭─[ lint/dd001-fk-no-relationship.yaml:28:15 ]
    │
 28 │       - name: id
    │               ─┬  
    │                ╰── column `food_category.id` has type `number(id)` but is missing the expected `examples` property
────╯
