crates/data-dict/tests/snapshots/validate__lint_dd003_missing_column.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd003-missing-column.yaml\")"
---
Error: [DD003] data-dict.yaml lint
    ╭─[ lint/dd003-missing-column.yaml:35:35 ]
    │
 35 │     join: food.food_category_id = food_category.identifier
    │                                   ────────────┬───────────  
    │                                               ╰───────────── column `identifier` is not defined in table `food_category`
────╯

Error: [DD001] data-dict.yaml lint
    ╭─[ lint/dd003-missing-column.yaml:17:15 ]
    │
 17 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` is marked `foreign_key` but no `relationships` entry points it at a `primary_key` column
────╯
