crates/data-dict/tests/snapshots/validate__lint_dd006_cardinality_mismatch.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd006-cardinality-mismatch.yaml\")"
---
Error: [DD006] data-dict.yaml lint
    ╭─[ lint/dd006-cardinality-mismatch.yaml:36:18 ]
    │
 36 │     cardinality: many-to-one
    │                  ─────┬─────  
    │                       ╰─────── cardinality is `many-to-one` but the right-side join column on `account` is not marked `primary_key` or `unique`
────╯
