crates/data-dict/tests/snapshots/validate__lint_dd007_enum_without_values.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd007-enum-without-values.yaml\")"
---
Error: [DD007]
    ╭─[ lint/dd007-enum-without-values.yaml:11:15 ]
    │
 11 │       - name: c
    │               ┬  
    │               ╰── column `t.c` has type `enum` but is missing the required `values` property
────╯
