crates/data-dict/tests/snapshots/validate__lint_dd007_other_type_missing_examples.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd007-other-type-missing-examples.yaml\")"
---
Error: [DD007]
    ╭─[ lint/dd007-other-type-missing-examples.yaml:11:15 ]
    │
 11 │       - name: label
    │               ──┬──  
    │                 ╰──── column `t.label` has type `string` but is missing the expected `examples` property
────╯

Error: [DD007]
    ╭─[ lint/dd007-other-type-missing-examples.yaml:14:15 ]
    │
 14 │       - name: code
    │               ──┬─  
    │                 ╰─── column `t.code` has type `number(id)` but is missing the expected `examples` property
────╯
