crates/data-dict/tests/snapshots/validate__lint_dd007_wrong_rep_on_enum.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd007-wrong-rep-on-enum.yaml\")"
---
Error: [DD007]
    ╭─[ lint/dd007-wrong-rep-on-enum.yaml:11:15 ]
    │
 11 │       - name: status
    │               ───┬──  
    │                  ╰──── column `t.status` has type `enum` but is missing the required `values` property
────╯

Error: [DD007]
    ╭─[ lint/dd007-wrong-rep-on-enum.yaml:11:15 ]
    │
 11 │       - name: status
    │               ───┬──  
    │                  ╰──── column `t.status` has type `enum` but uses `range`; enum columns represent their data with `values`
────╯
